src/app/views/job-details/job-details.component.scss
@import '../../styles/variables';

.job-details-header {
  background-color: $default-bg-color;
  border-bottom: 1px solid $white-bg-border;
  .company-logo {
    float: right;
    max-height: 80px;
    border-radius: 2px;
    padding: 15px 0;
  }
}

.separator {
  margin-top: 5px;
  margin-bottom: 5px;
  margin-left: 0px;
  margin-right: 0px;
}

.job-details-container {
  max-width: 600px;
  padding-left: 10px;
  padding-right: 10px;
  margin-top: 10px;
  margin-left: auto;
  margin-right: auto;
  background-color: $default-bg-color;
}

.job-preview-row {
  flex-wrap: nowrap;
}

.job-title {
  margin-top: 5px;
  margin-bottom: 0px;
}

.job-translate-container {
  text-align: right;
}

.job-preview-text {
  margin-top: 1px;
  margin-bottom: 0px;
}

.job-preview-icon-container {
  width: auto;
  text-align: center;
}

.job-details-body {
  background-color: $default-bg-color;
  .content {
    margin: 15px 0;
  }
}

.job-status {
  background: $color-primary-cerise;
  padding: 30px;
  color: white;
}

.job-status-container {
  max-width: 400px;
  height: 100%;
  margin-left: auto;
  margin-right: auto;
}

.job-status-icon-container {
  display: flex;
  align-items: center;
}

.job-status-icon-background {
  border-radius: 50%;
  background: black;
  width: auto;
  overflow: hidden;
  height: 1%;
  padding: 12px;
}

.job-status-text {
  font-weight: 300;
  text-align: right;
}

.job-status-salary-text {
  text-align: right;
}

.sign-or-create-text {
  text-align: center;
  font-weight: 300;
  margin-top: -5px;
  margin-bottom: -5px;
}

.applied-text {
  margin-bottom: 15px;
}

.expand-details-text-container {
  width: 100%;
}

.expand-details-text {
  width: 100%;
  font-weight: 300;
  text-align: center;
}

.expand-link-container {
  display: inline-block;
}

.expand-details-link {
  font-weight: 300;
  text-align: center;
  text-decoration: underline;
  cursor: pointer;
}

.no-of-candidates-text {
  font-weight: 300;
  text-align: center;
}

.time-left-text {
  font-weight: 300;
  text-align: center;
}

.hired-text {
  font-weight: 300;
  text-align: center;
}

.accept-applicant-link {
  color: $white;
  text-decoration: underline;
}

.sign-in-or-create-container {
  display: inline-block;
  width: auto;
}

.sign-in-button {
  width: calc(100% - 30px);
}

.company-logo {
  width: auto;
  height: auto;
  max-width: 100px;
  max-height: 100px;
}

.button {
  cursor: pointer;

  &:hover {
    background: $color-cerise-700;
  }
}

.send-candidate-request-container {
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  background: $color-secondary-gray;
  z-index: 10000;
  color: white;
}

